Added review for mailtrain

--- a/index.html
+++ b/index.html
@@ -232,6 +232,56 @@
 
                         </ul>
                     </li>
+
+                        <li>
+                        <h4>
+                            mailtrain
+                        </h4>
+
+                        <ul>
+                            <li>
+                                <a href="https://github.com/Mailtrain-org/mailtrain"> V1 Github Repository </a><br>
+
+                                <a href="https://github.com/Mailtrain-org/mailtrain/tree/development"> Project V2 under Beta development </a><br>
+                                Frontend built on Node.js (Probably out)
+                            </li>
+                        </ul>
+
+                        <ul>
+                            Pros
+                            <li>
+                                Provide contact list management features -manage multiple contact lists and upload existing file
+                            </li>
+                            <li>
+                                Ability to provide attachments.
+                            </li>
+                           <li>
+                                Allow upload of HTML template in application - No upload but can copy & paste.
+                            </li>
+                            <li>
+                                Allow emails to be sent out
+                            </li>
+                            <li>
+                                Allow design of emails in application (WYSYWIG Editor)
+                            </li>
+
+                            <li>
+                                Permissions for sending, managing contact list, and editing / creating newsletters - admin account to manage
+                            </li>
+                        </ul>
+
+                        <ul>
+                            Cons
+                             <li>
+                                Login with NYC.ID - Does not support NYC.ID
+                            </li>
+                            
+                            <li>
+                                Store newsletter statistics (delivery success / failures) - No support.
+                            </li>                 
+
+                        </ul>
+                    </li>
                 </ol>
             </li>
         </ul>
